<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/margin_small"
    tools:context=".ContactoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itNombre"
            style="@style/inputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campoNombre"
            app:helperText="@string/obligatorio"
            app:counterMaxLength="@integer/counter_medium"
            app:startIconDrawable="@drawable/baseline_nombre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                style="@style/Widget.Design.TextInputLayout"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itBirthday"
            style="@style/inputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campoBirthdate"
            app:counterMaxLength="@integer/counter_birthdate"
            app:startIconDrawable="@drawable/baseline_pastel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                style="@style/Widget.Design.TextInputLayout"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itTelefono"
            style="@style/inputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campoTelefono"
            app:helperText="@string/obligatorio"
            app:counterMaxLength="@integer/counter_phone"
            app:startIconDrawable="@drawable/baseline_telefono">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                style="@style/Widget.Design.TextInputLayout"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itNotas"
            style="@style/inputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campoNotas"
            app:counterMaxLength="@integer/counter_big"
            app:startIconDrawable="@drawable/baseline_nota">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNotas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                style="@style/Widget.Design.TextInputLayout"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/itImagen"
                style="@style/inputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/campoUrl"
                app:helperText="@string/obligatorio"
                app:counterMaxLength="@integer/counter_big"
                app:startIconDrawable="@drawable/baseline_imagen"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etImagen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    style="@style/Widget.Design.TextInputLayout"/>

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imgFoto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/ic_launcher" />

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>